# Gaonbooks-finder

./: .gitignore  .pre-commit-config.yaml  README.md  books.py  dev-start-server.bat  dev-start-server.sh
.github/workflows/: pre-commit.yml
Gaonbooks/: books.py  requirements.txt
Gaonbooks/assets/: icon.py
Gaonbooks/soldout/: 도서명1.txt  도서명10.txt
assets/: icon.py
assets/icons/: icon.icns
excel/: example_excel_file.xlsx
fullstack/backend/: pyproject.toml  run.bat
fullstack/backend/app/: books_init.py  main.py
fullstack/backend/app/templates/: find.html
fullstack/frontend/: README.md  vite.config.js
fullstack/frontend/src/: App.css  App.jsx  index.css
fullstack/frontend/src/components/: BookCard.jsx
soldout/: 도서명10.txt
