[tool.poetry]
name = "gaonbooks-finder"
version = "0.1.0"
description = ""
authors = ["LeeInGyu <developLee20@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
requests = "^2.32.3"
psutil = "^7.0.0"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
pre-commit = "^4.2.0"
jinja2 = "^3.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
